chore: Adjust PWA asset and configuration paths for root deployment by removing the `/focus-timer/` prefix.

--- a/manifest.json
+++ b/manifest.json
@@ -2,21 +2,21 @@
   "name": "Pomodoro Timer - Focus & Productivity",
   "short_name": "Pomodoro",
   "description": "Focus better with multiple customizable Pomodoro timers. Track your productivity with work sessions and breaks.",
-  "start_url": "/focus-timer/",
-  "scope": "/focus-timer/",
+  "start_url": "/",
+  "scope": "/",
   "display": "standalone",
   "background_color": "#0a0e27",
   "theme_color": "#667eea",
   "orientation": "portrait-primary",
   "icons": [
     {
-      "src": "/focus-timer/icon-192.png",
+      "src": "/icon-192.png",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "any maskable"
     },
     {
-      "src": "/focus-timer/icon-512.png",
+      "src": "/icon-512.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "any maskable"
